bst all possible arrays